fix: missing wrap

--- a/src/styles/objects/_index.scss
+++ b/src/styles/objects/_index.scss
@@ -69,6 +69,7 @@
 
   &__filter-wrap {
     display: flex;
+    flex-wrap: wrap;
     gap: vars.$spacer;
   }
 
